@@ -15,6 +15,7 @@ changes relative to sbcl-1.3.21:
     when processing a sysinit or userinit file
   * bug fix: save-lisp-and-die is able to collect more garbage on non-x86oid
     gencgc targets.
+  * bug fix: fixed out-of-bounds array read in optimized POSITION on bit-vectors
 
 changes in sbcl-1.3.21 relative to sbcl-1.3.20:
   * minor incompatible change: the CLOBBER-IT restart for defstruct redefintion
